<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="upcoming_elections">Upcoming elections</string>

    <string name="election_date_place_holder">%s %s %s</string>
    <string name="request_error_message">Ops… We are having some issues requesting the elections data, please try again later.</string>
    <string name="request_unavailable_data_message">The information for this election is unavailable</string>
    <string name="ballot_information">Ballot information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="election_information">Election Information</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My representatives</string>
    <string name="open_representative_twitter">Open representative Twitter</string>
    <string name="representative_search">Representative Search</string>
    <string name="empty_representatives_list">No representatives where found</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use your location.</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>

</resources>
