<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="voterInfoResponse"
            type="com.example.android.politicalpreparedness.network.models.VoterInfoResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/errorMessage"
            style="@style/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_error_message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/unavailableDataMessage"
            style="@style/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_unavailable_data_message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/voterInfoContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/electionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/default_padding"
                android:singleLine="true"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@{voterInfoResponse.election.name}" />

            <TextView
                android:id="@+id/electionDate"
                style="@style/defaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                app:electionDate="@{voterInfoResponse.election.electionDay}"
                app:layout_constraintTop_toBottomOf="@id/electionName"
                tools:text="12 November 2055" />

            <TextView
                android:id="@+id/stateHeader"
                style="@style/boldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/election_information"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/electionDate" />

            <TextView
                android:id="@+id/stateLocations"
                style="@style/linkTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voting_locations"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/stateHeader" />

            <TextView
                android:id="@+id/stateBallot"
                style="@style/linkTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ballot_information"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/stateLocations" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/saveButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/electionName"
                app:lottie_rawRes="@raw/save_animation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
